--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,31 +1,10 @@
 import HomepageTemplate from '../components/Homepage.js';
 export default HomepageTemplate;
 
-## MDX content starts here
+## dmctop Download
 
 <PageDescription>
 
-The homepage content here lives in the `src/pages/index.mdx` directory at the
-root of your project. Just like the other mdx pages, you can use all of our
-theme components here without importing them. Review the
-[MDX example source](https://github.com/carbon-design-system/gatsby-theme-carbon/blob/main/packages/example/src/pages/index.mdx).
+dmctop is now available to be downloaded from [Db2 Download Center](https://www.ibm.com/support/fixcentral/swg/selectFixes?product=ibm%2FInformation+Management%2FIBM+Db2+Data+Management+Console&fixids=1.0.4.1-dmctop&source=dbluesearch&function=fixId&parent=ibm/Information%20Management) website.
 
 </PageDescription>
-
-<FeatureCard
-    color="dark"
-    href="/getting-started"
-    title="Getting started"
-    actionIcon="arrowRight"
-    className="homepage-feature"
-    >
-
-<ArtDirection>
-
-![blue vertical stripes](../images/blue-stripes-mobile.jpg)
-![blue vertical stripes](../images/blue-stripes-tablet.jpg)
-![blue vertical stripes](../images/blue-stripes.jpg)
-
-</ArtDirection>
-
-</FeatureCard>
