--- a/src/pages/Overview/db_overview.mdx
+++ b/src/pages/Overview/db_overview.mdx
@@ -17,7 +17,7 @@ The overview tells you at a glance how busy the monitored database is.  It provi
 * Indicators of contention such as high lock wait time, lock escalations or deadlocks.
 
 # Screenshot
-![image](./db_overview.png)
+![image](./images/db_overview.png)
 
 # Metric shown
 
