--- a/src/pages/IO/bufferpools.mdx
+++ b/src/pages/IO/bufferpools.mdx
@@ -1,5 +1,11 @@
 # Purpose
 
+Buffer pool hit ratios are one of the most fundamental metrics for measuring database performance.  They provide an important overall measure of how effectively the system is exploiting memory to avoid disk IO.  This view shows hit ratios for all buffer pools and for various data types.
+
+
+# Screenshot
+![image](./images/bufferpools.png)
+
 # Metric shown
 
 ## Gauge
