--- a/src/pages/IO/prefetchers.mdx
+++ b/src/pages/IO/prefetchers.mdx
@@ -1,5 +1,14 @@
 # Purpose
 
+Prefetchers view shows the usage and performance of prefetchers.
+
+The purpose of [prefetching system](https://www.ibm.com/support/pages/db2-prefetching-understanding-configuring-monitoring-tuning) is to retrieve data from physical storage to have it available at the time it is required by tasks running in the database. It depends on prefetchers to read data from the I/O subsystem. 
+
+
+
+# Screenshot
+![image](./images/prefetchers.png)
+
 
 # Metric shown
 
