--- a/src/pages/IO/table.mdx
+++ b/src/pages/IO/table.mdx
@@ -1,5 +1,11 @@
 # Purpose
 
+Table view shows the performance of I/O operations for each table including the number of rows read, inserted, updated, and deleted.
+
+
+# Screenshot
+![image](./images/table.png)
+
 
 # Metric shown
 
@@ -207,7 +213,9 @@ TABSCHEMA = [MON_GET_TABLE](https://www.ibm.com/docs/en/db2/11.5?topic=functions
 
 ### # of member
 
-The number of distinct MEMBER in `MON_GET_TABLE`.
+The number of members.
+
+The value equals to the number of distinct MEMBER in `MON_GET_TABLE`.
 
 **Source:** [MON_GET_TABLE](https://www.ibm.com/docs/en/db2/11.5?topic=functions-mon-get-table-get-table-metrics)(NULL, NULL, #MEMBER#).[MEMBER](https://www.ibm.com/docs/en/db2/11.5?topic=reference-m#r0054432)
 
