--- a/src/pages/IO/table_spaces.mdx
+++ b/src/pages/IO/table_spaces.mdx
@@ -1,5 +1,10 @@
 # Purpose
 
+Table spaces view shows the performance of I/O operations for each table space including hit ratios and number of pages read and written for all buffer pools and for various data types and database usage.
+
+
+# Screenshot
+![image](./images/table_spaces.png)
 
 
 # Metric shown
@@ -154,7 +159,7 @@ IO_TYPE_T = [MON_GET_TABLESPACE](https://www.ibm.com/docs/en/db2/11.5?topic=func
 
 ### DB Size/Capacity
 
-The size of the database and the database capacity.
+The percentage of database usage.
 
 = <DB_SIZE> / <DB_CAPACITY>
 
