--- a/src/pages/Locking/blockers_waiters.mdx
+++ b/src/pages/Locking/blockers_waiters.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Blocker Waiters view shows transactions that are blocking others.  In scenarios where work is hung, waiting on locks, this shows you the root cause of the problem.  You can easily see which connections could be forced to resolve the hang.
+
 
 # Screenshot
 ![image](./images/blockers_waiters.png)
