--- a/src/pages/Locking/locked_objects.mdx
+++ b/src/pages/Locking/locked_objects.mdx
@@ -1,5 +1,6 @@
 # Purpose
 
+Locked objects view shows the list of objects that are subjects to locks in the currently connected database. 
 
 # Screenshot
 ![image](./images/lock_objects.png)
