--- a/src/pages/Locking/locks.mdx
+++ b/src/pages/Locking/locks.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Locks view shows the list of locks in the currently connected database. 
+
 
 # Screenshot
 ![image](./images/locks.png)
