--- a/src/pages/Memory/database_memory_pools.mdx
+++ b/src/pages/Memory/database_memory_pools.mdx
@@ -1,5 +1,9 @@
 # Purpose
 
+Database memory pools view shows the list of memory pools. This view is helpful to visualize the usage of memory pool of each memory set.
+
+
+
 
 # Screenshot
 ![image](./images/db_mem_pools.png)
