--- a/src/pages/Memory/instance_memory_sets.mdx
+++ b/src/pages/Memory/instance_memory_sets.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Instance memory sets view shows the list of memory sets. This view is helpful to visualize the usage of each memory set.
+
 # Screenshot
 ![image](./images/inst_mem_sets.png)
 
