--- a/src/pages/Other/federation.mdx
+++ b/src/pages/Other/federation.mdx
@@ -1,7 +1,7 @@
 # Purpose
 
 
-View federated activity for the federated database.
+Federation view shows the federated activity for the federated database.
 
 
 # Screenshot
