--- a/src/pages/Other/reorg.mdx
+++ b/src/pages/Other/reorg.mdx
@@ -1,5 +1,8 @@
 # Purpose
 
+
+REORG view shows the information of table reorganization. If no tables have been reorganized, the list will be empty. This view could be used to check the progress and status of table reoriganization.
+
 # Screenshot
 ![image](./images/reorg.png)
 
