--- a/src/pages/Other/table_movement.mdx
+++ b/src/pages/Other/table_movement.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Table movement view shows the procedue information of table movement. This view could be used to check the status information and configuration options related to the table to be moved.
+
 # Screenshot
 ![image](./images/table_movement.png)
 
