--- a/src/pages/Other/utilities.mdx
+++ b/src/pages/Other/utilities.mdx
@@ -1,5 +1,6 @@
 # Purpose
 
+Utility view shows the list of utilites. This view could be used to check the progress and state of each utility.
 
 # Screenshot
 ![image](./images/utilities.png)
