--- a/src/pages/Overview/db_overview.mdx
+++ b/src/pages/Overview/db_overview.mdx
@@ -1,10 +1,11 @@
 # Purpose
-The overview tells you at a glance how busy the monitored database is.  It provides basic information about the current level of activity.  For example:
+Overview view tells you at a glance how busy the monitored database is.  It provides basic information about the current level of activity.  For example:
 
-* Number of connections
-* Memory consumption
-* I/O efficiency
-* Indicators of contention such as high lock wait time, lock escalations or deadlocks.
+* **Overview**: Basic information of database.
+* **Resource consumption**: Indicators to show resource consumption of database such as the memory consumption.
+* **Throughput**: Indicators to show speed of database transaction operations.
+* **Contention**: Indicators of contention such as high lock wait time, lock escalations or deadlocks.
+* **Time spent**: Indicators of time spent on database operations.
 
 # Screenshot
 ![image](./images/db_overview.png)
