--- a/src/pages/Statements/executed_sql.mdx
+++ b/src/pages/Statements/executed_sql.mdx
@@ -1,7 +1,8 @@
 # Purpose
 
+Executed statements view shows a list of dynamic SQL statements that are recently run. This is useful for identifying statemnts that are costly or long running.
 
-See a list of recently run statements. Drill down is provided to see the full SQL text or run explain on a statement.
+Drill down is provided to see the full SQL text or run explain on a statement.
 
 
 # Screenshot
