--- a/src/pages/Statements/in-flight_statements.mdx
+++ b/src/pages/Statements/in-flight_statements.mdx
@@ -1,5 +1,9 @@
 # Purpose
 
+In-flight statements view shows a list of SQL statements that are currently running. This is useful for identifying statemnts that are costly or long running.
+
+Drill down is provided to see the full SQL text or run explain on a statement.
+
 
 # Screenshot
 ![image](./images/in-flight_stmts.png)
