--- a/src/pages/Storage/table_space_utilization.mdx
+++ b/src/pages/Storage/table_space_utilization.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Table space view shows the space utilization for each table space including the current size, percentage free space, and size of free space.
+
 
 # Screenshot
 ![image](./images/table_space_utilization.png)
