--- a/src/pages/Throughput/members.mdx
+++ b/src/pages/Throughput/members.mdx
@@ -1,6 +1,6 @@
 # Purpose
 
-Show some basic statistics about individual members.  Member specific memory and transaction log usage are found here.
+Members view shows some basic statistics about individual members.  Member specific memory and transaction log usage are found here.
 
 # Screenshot
 ![image](./images/members.png)
