--- a/src/pages/Throughput/service_classes.mdx
+++ b/src/pages/Throughput/service_classes.mdx
@@ -1,5 +1,5 @@
 # Purpose
-Show how much work is happening in each WLM service class.
+Service classes view shows how much work is happening in each WLM service class.
 
 One of the main purposes of WLM service classes is to apply different priorities and or policies to different types of work.  For example, limiting the number of large queries allowed to run concurrently.  Service classes are also used to give higher priority to business critical applications.
 
