--- a/src/pages/Throughput/workload_assignment.mdx
+++ b/src/pages/Throughput/workload_assignment.mdx
@@ -1,7 +1,8 @@
 # Purpose
-Show what workload each connection is mapped to, and the client info fields.  This is useful for debugging connections that are not being mapped as expected.  This view also shows some WLM specific metrics related to connections.
+Work assignment view shows what workload each connection is mapped to, and the client info fields.  This is useful for debugging connections that are not being mapped as expected.  This view also shows some WLM specific metrics related to connections.
 
 The primary fields shown are the application handle (identifies the connection), the workload it is currently mapped to and the connection attributes (aka client info fields) for the connection.
+
 # Screenshot
 ![image](./images/workload_assignment.png)
 
