--- a/src/pages/Throughput/workloads.mdx
+++ b/src/pages/Throughput/workloads.mdx
@@ -1,5 +1,5 @@
 # Purpose
-Show how much work is happening in each WLM workload.
+Workloads view shows how much work is happening in each WLM workload. 
 
 One of the intended purposes of workloads in WLM is to split particular users or applications into separate categories for monitoring and reporting purposes.  For example, you might create a workload where all Cognos reports will run so that you can track the impact of Cognos on your production database.
 
