--- a/src/pages/Top_consumers/activities.mdx
+++ b/src/pages/Top_consumers/activities.mdx
@@ -1,5 +1,6 @@
 # Purpose
 
+Activities view shows the user which activities consume the most resources.  Activities are generally queries, but long running DDL and LOAD activities are also included here.
 
 
 # Screenshot
