--- a/src/pages/Getting_started/run_dmctop.mdx
+++ b/src/pages/Getting_started/run_dmctop.mdx
@@ -1,13 +1,11 @@
-# Run dmctop
-
-## Run dmctop from Db2 Server
+# Run dmctop from Db2 Server
 When running on DB server, dmctop connects to local database without requiring credentials. dmctop uses existing ODBC driver on the server hence installation of separate ODBC driver is not required. 
 
 * Copy dmctop on server under desire location
 
 * Run dmctop
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE
 ```
@@ -18,11 +16,11 @@ dmctop.exe  -d SAMPLE
 ```
 Now, `dmctop v1.0.0.0` is bundled with Db2 v11.5.5. Without copying dmctop on server, you can directly do `Run dmctop` step to start the tool.
 
-## Run dmctop remotely
+# Run dmctop remotely
 The easiest way to run dmctop is to fully specify the database and user credentials. The dmctop will use the CLI driver. 
 
 
-Linux:
+Linux/AIX:
 ```
 ./dmctop  -d <database_name>  -n <host_name>  -r <port_number>  -u <user_id> [-cert-path Root-CA certificate absolute path]
 ```
@@ -36,7 +34,7 @@ dmctop.exe  -d <database_name>  -n <host_name>  -r <port_number>  -u <user_id> [
 For example:
 
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1
 ```
@@ -51,7 +49,7 @@ By default dmctop uses secure connection, if databases is configured with intern
 
 For example:
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -cert-path \home\db2inst1\ssl\inernal-CA.arm
 ```
@@ -68,7 +66,7 @@ If SSL is not configured for databases then `-insecure` option can be used to di
 
 For example:
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -insecure
 ```
@@ -82,7 +80,7 @@ dmctop requires a password. You can specify the password on the command line wit
 
 For example:
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -p <password>
 ```
@@ -92,7 +90,7 @@ Windows:
 dmctop.exe  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -p <password>
 ```
 
-## Run dmctop in background mode
+# Run dmctop in background mode
  When using the -b parameter, dmctop saves information to file in CSV format. Issuing multiple sub-options for background mode (-b) is not supported. 
 
 The -b parameter takes one of the following single character sub-option values
@@ -123,7 +121,7 @@ For example:
 
 Using default file name
 
-Linux:
+Linux/AIX:
 ```
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -insecure -b d
 ```
@@ -134,7 +132,7 @@ dmctop.exe  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -insecure -b d
 
 Specifying output file name
 
-Linux:
+Linux/AIX:
 ``` 
 dmctop  -d SAMPLE  -n localhost  -r 50000  -u db2inst1 -insecure -b d -f <outputFile>.csv
 ```
