--- a/src/pages/IO/logging_performance.mdx
+++ b/src/pages/IO/logging_performance.mdx
@@ -1,5 +1,10 @@
 # Purpose
 
+Logging performance view shows the performance of transaction logging.
+
+# Screenshot
+![image](./images/logging_perf.png)
+
 
 # Metric shown
 
