--- a/src/pages/Throughput/skew_monitor.mdx
+++ b/src/pages/Throughput/skew_monitor.mdx
@@ -1,12 +1,14 @@
 # Purpose
 
-This view presents data useful in assessing skew in access patterns.  When a query accesses more data on some members than on others, the more heavily loaded members become bottlenecks, making the whole query take longer.
+Skew monitor view presents data useful in assessing skew in access patterns.  When a query accesses more data on some members than on others, the more heavily loaded members become bottlenecks, making the whole query take longer.
 
 
 # Screenshot
 ![image](./images/skew_monitor.png)
 
 # Metric shown
+
+<hr />
 
 ### Member
 
@@ -15,6 +17,8 @@ The numeric identifier for the database member from which the data was retrieved
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).[MEMBER](https://www.ibm.com/docs/en/db2/11.5?topic=reference-m#r0054432)
 
 
+<hr />
+
 ### Cpu time
 
 The total amount of CPU time used while within the database system.
@@ -22,12 +26,16 @@ The total amount of CPU time used while within the database system.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([TOTAL_CPU_TIME](https://www.ibm.com/docs/en/db2/11.5?topic=reference-t#r0054057))
 
+<hr />
+
 ### Logical reads
 
 Indicates the number of data, index, and column-organized pages which have been requested from the buffer pool (logical) for regular, large and temporary table spaces.
 
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).(SUM([POOL_DATA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0001235)) + SUM([POOL_INDEX_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0001238)) + SUM([POOL_XDA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0022731)) + SUM([POOL_COL_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0060763)) + SUM([POOL_TEMP_DATA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0011302)) + SUM([POOL_TEMP_INDEX_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0011303)) + SUM([POOL_TEMP_XDA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0022738)) + SUM([POOL_TEMP_COL_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0060873)))
+
+<hr />
 
 ### Logical temp reads
 
@@ -37,11 +45,15 @@ Indicates the number of data, index, and column-organized pages which have been 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).(SUM([POOL_TEMP_DATA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0011302)) + SUM([POOL_TEMP_INDEX_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0011303)) + SUM([POOL_TEMP_XDA_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0022738)) +  SUM([POOL_TEMP_COL_L_READS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-p#r0060873)))
 
 
+<hr />
+
 ### Rows read
 
 The number of rows read from the table.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([ROWS_READ](https://www.ibm.com/docs/en/db2/11.5?topic=reference-r#r0001317))
+
+<hr />
 
 ### Rows modified
 
@@ -50,6 +62,8 @@ The number of rows inserted, updated, or deleted.
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([ROWS_MODIFIED](https://www.ibm.com/docs/en/db2/11.5?topic=reference-r#r0051568))
 
 
+<hr />
+
 ### Tq recvs
 
 The total number of buffers received from table queues using the internal FCM communications mechanism.
@@ -57,11 +71,15 @@ The total number of buffers received from table queues using the internal FCM co
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([FCM_TQ_RECVS_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054034))
 
 
+<hr />
+
 ### Tq sends
 
 The total number of buffers containing table queue data sent using the internal FCM communications mechanism.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([FCM_TQ_SENDS_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054037))
+
+<hr />
 
 ### Tq spills
 
@@ -69,11 +87,15 @@ Total number of table queue buffers overflowed to a temporary table.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([TQ_TOT_SEND_SPILLS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-t#r0001365))
 
+<hr />
+
 ### Overflows
 
 The number of times that operations exceeded the available sort heap memory.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).(SUM([SORT_OVERFLOWS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-s#r0001221)) + SUM([HASH_JOIN_OVERFLOWS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-h#r0002286)) + SUM([OLAP_FUNC_OVERFLOWS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-o#r0051898)) + SUM([HASH_GRPBY_OVERFLOWS](https://www.ibm.com/docs/en/db2/11.5?topic=reference-h#r0061039)))
+
+<hr />
 
 ### Fcm volume
 
@@ -82,12 +104,16 @@ The total amount of data received and distributed via the FCM communications lay
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([FCM_RECV_VOLUME](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054026) + [FCM_SEND_VOLUME](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054029))
 
 
+<hr />
+
 ### Fcm buffers sent
 
 The total number of buffers sent using the internal FCM communications layer.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([FCM_SENDS_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054031))
 
+
+<hr />
 
 ### Fcm buffers recvd
 
@@ -96,11 +122,15 @@ The total number of buffers received for internal requests using the FCM communi
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([FCM_RECVS_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-f#r0054028))
 
 
+<hr />
+
 ### Activities completed
 
 The total number of coordinator activities at any nesting level that completed successfully.
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([ACT_COMPLETED_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-#r0054007))
+
+<hr />
 
 ### Requests
 
@@ -108,6 +138,8 @@ The total number of requests executed, including both application and internal r
 
 **Source:** [MON_GET_SERVICE_SUBCLASS](https://www.ibm.com/docs/en/db2/11.5?topic=mpf-mon-get-service-subclass-get-service-subclass-metrics)(NULL, NULL, #MEMBER#).SUM([RQSTS_COMPLETED_TOTAL](https://www.ibm.com/docs/en/db2/11.5?topic=reference-r#r0054049))
 
+
+<hr />
 
 ### In-flight activities
 
