--- a/src/pages/Storage/table_utilization.mdx
+++ b/src/pages/Storage/table_utilization.mdx
@@ -1,5 +1,7 @@
 # Purpose
 
+Table utilization view shows the utilization for each table including size of different types of pages used in the table.
+
 # Screenshot
 ![image](./images/table_utilization.png)
 
