--- a/src/pages/Getting_started/run_dmctop.mdx
+++ b/src/pages/Getting_started/run_dmctop.mdx
@@ -3,6 +3,8 @@ When running on DB server, dmctop connects to local database without requiring c
 
 * Copy dmctop on server under desire location
 
+*  Setup environment variable (If db2inst1 account is used then setting the environment variable is not required).
+
 * Run dmctop
 
 Linux/AIX:
