--- a/src/pages/Storage/table_space_utilization.mdx
+++ b/src/pages/Storage/table_space_utilization.mdx
@@ -1,6 +1,6 @@
 # Purpose
 
-Table space view shows the space utilization for each table space including the current size, percentage free space, and size of free space.
+Table space utiliazation view shows the space utilization for each table space including the current size, percentage free space, and size of free space.
 
 
 # Screenshot
